--- a/platformio.ini
+++ b/platformio.ini
@@ -31,3 +31,32 @@ upload_port = 192.168.1.55
 upload_flags = 
 	--auth=esp8266
 board_build.filesystem = littlefs
+
+
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.8.0
+	arduino-libraries/NTPClient@^3.1.0
+	https://github.com/jeffminton/EspHtmlTemplateProcessor.git
+board_build.filesystem = littlefs
+
+[env:esp12eota]
+platform = espressif8266
+board = esp12e
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.8.0
+	arduino-libraries/NTPClient@^3.1.0
+	https://github.com/jeffminton/EspHtmlTemplateProcessor.git
+upload_protocol = espota
+upload_port = 192.168.1.56
+upload_flags = 
+	--auth=esp8266
+board_build.filesystem = littlefs
+
+
+
+
